js/js.translator/testData/incremental/invalidation/localInlineFunction/lib1/l1.0.kt
fun foo(): String {
    inline fun localFoo(): String {
        return "OK-0"
    }

    return localFoo()
}
